subprojects/PCL/include/pcl/pcl_container.h


typedef void (*pcl_sub_callback_t)(pcl_container_t* c,
                                   const pcl_msg_t*  msg,
                                   void*             user_data);
typedef pcl_status_t (*pcl_service_handler_t)(pcl_container_t*    c,
                                              const pcl_msg_t*    request,
                                              pcl_msg_t*          response,
                                              pcl_svc_context_t*  ctx,
                                              void*               user_data);
typedef pcl_status_t (*pcl_stream_handler_t)(pcl_container_t*       c,
                                             const pcl_msg_t*       request,
                                             pcl_stream_context_t*  stream_ctx,
                                             void*                  user_data);
const char* pcl_container_name(const pcl_container_t* c);
pcl_status_t pcl_container_set_tick_rate_hz(pcl_container_t* c, double hz);
double pcl_container_get_tick_rate_hz(const pcl_container_t* c);
pcl_status_t pcl_container_set_param_str(pcl_container_t* c,
                                         const char* key, const char* value);
pcl_status_t pcl_container_set_param_f64(pcl_container_t* c,
                                         const char* key, double value);
pcl_status_t pcl_container_set_param_bool(pcl_container_t* c,
                                          const char* key, bool value);
const char* pcl_container_get_param_str(const pcl_container_t* c,
                                        const char* key,
                                        const char* default_val);
double pcl_container_get_param_f64(const pcl_container_t* c,
                                   const char* key, double default_val);
bool pcl_container_get_param_bool(const pcl_container_t* c,
                                  const char* key, bool default_val);
pcl_port_t* pcl_container_add_publisher(pcl_container_t* c,
                                        const char*      topic,
                                        const char*      type_name);
pcl_port_t* pcl_container_add_subscriber(pcl_container_t* c,
                                         const char*         topic,
                                         const char*         type_name,
                                         pcl_sub_callback_t  cb,
                                         void*               user_data);
pcl_port_t* pcl_container_add_service(pcl_container_t*      c,
                                      const char*           service_name,
                                      const char*           type_name,
                                      pcl_service_handler_t handler,
                                      void*                 user_data);
pcl_port_t* pcl_container_add_stream_service(pcl_container_t*     c,
                                             const char*          service_name,
                                             const char*          type_name,
                                             pcl_stream_handler_t handler,
                                             void*                user_data);
pcl_status_t pcl_port_set_route(pcl_port_t*              port,
                                uint32_t                 route_mode,
                                const char* const*       peer_ids,
                                uint32_t                 peer_count);
pcl_status_t pcl_port_publish(pcl_port_t* port, const pcl_msg_t* msg);
pcl_status_t pcl_container_invoke_async(pcl_container_t* c,
                                        const char*      service_name,
                                        const pcl_msg_t* request,
                                        pcl_resp_cb_fn_t callback,
                                        void*            user_data);
pcl_status_t pcl_service_respond(pcl_svc_context_t* ctx,
                                 const pcl_msg_t*   response);
void pcl_service_context_free(pcl_svc_context_t* ctx);
pcl_status_t pcl_stream_send(pcl_stream_context_t* ctx, const pcl_msg_t* msg);
pcl_status_t pcl_stream_end(pcl_stream_context_t* ctx);
pcl_status_t pcl_stream_abort(pcl_stream_context_t* ctx, pcl_status_t error_code);
bool pcl_stream_is_cancelled(const pcl_stream_context_t* ctx);
pcl_status_t pcl_stream_cancel(pcl_stream_context_t* ctx);