subprojects/PCL/include/pcl/pcl_transport_socket.h


typedef struct pcl_socket_transport_t pcl_socket_transport_t;
typedef enum {
  PCL_SOCKET_STATE_CONNECTING   = 0,  
  PCL_SOCKET_STATE_CONNECTED    = 1,  
  PCL_SOCKET_STATE_DISCONNECTED = 2   
} pcl_socket_state_t;
typedef struct {
  uint32_t              connect_timeout_ms;  
  uint32_t              max_retries;         
  int                   auto_reconnect;      
  pcl_socket_state_cb_t state_cb;            
  void*                 state_cb_data;       
} pcl_socket_client_opts_t;
pcl_socket_transport_t* pcl_socket_transport_create_server(uint16_t        port,
                                                           pcl_executor_t* executor);
pcl_socket_transport_t* pcl_socket_transport_create_server_ex(
    uint16_t           port,
    pcl_executor_t*    executor,
    volatile uint16_t* port_ready);
uint16_t pcl_socket_transport_get_port(const pcl_socket_transport_t* ctx);
pcl_socket_transport_t* pcl_socket_transport_create_client(const char*      host,
                                                           uint16_t         port,
                                                           pcl_executor_t*  executor);
pcl_socket_transport_t* pcl_socket_transport_create_client_ex(
    const char*                     host,
    uint16_t                        port,
    pcl_executor_t*                 executor,
    const pcl_socket_client_opts_t* opts);
pcl_socket_state_t pcl_socket_transport_get_state(const pcl_socket_transport_t* ctx);
pcl_status_t pcl_socket_transport_set_peer_id(pcl_socket_transport_t* ctx,
                                              const char*             peer_id);
const pcl_transport_t* pcl_socket_transport_get_transport(pcl_socket_transport_t* ctx);