subprojects/PCL/bindings/ada/pcl_bindings.ads


  function Container_Name
    (Container : Pcl_Container_Access) return Interfaces.C.Strings.chars_ptr;
  pragma Import(C, Container_Name, "pcl_container_name");

  function Set_Tick_Rate_Hz
    (Container : Pcl_Container_Access;
     Hz        : Interfaces.C.double) return Pcl_Status;
  pragma Import(C, Set_Tick_Rate_Hz, "pcl_container_set_tick_rate_hz");

  function Get_Tick_Rate_Hz
    (Container : Pcl_Container_Access) return Interfaces.C.double;
  pragma Import(C, Get_Tick_Rate_Hz, "pcl_container_get_tick_rate_hz");

  function Set_Param_Str
    (Container : Pcl_Container_Access;
     Key       : Interfaces.C.Strings.chars_ptr;
     Value     : Interfaces.C.Strings.chars_ptr) return Pcl_Status;
  pragma Import(C, Set_Param_Str, "pcl_container_set_param_str");

  function Set_Param_F64
    (Container : Pcl_Container_Access;
     Key       : Interfaces.C.Strings.chars_ptr;
     Value     : Interfaces.C.double) return Pcl_Status;
  pragma Import(C, Set_Param_F64, "pcl_container_set_param_f64");

  function Set_Param_Bool
    (Container : Pcl_Container_Access;
     Key       : Interfaces.C.Strings.chars_ptr;
     Value     : C_Bool) return Pcl_Status;
  pragma Import(C, Set_Param_Bool, "pcl_container_set_param_bool");

  function Get_Param_Str
    (Container   : Pcl_Container_Access;
     Key         : Interfaces.C.Strings.chars_ptr;
     Default_Val : Interfaces.C.Strings.chars_ptr)
      return Interfaces.C.Strings.chars_ptr;
  pragma Import(C, Get_Param_Str, "pcl_container_get_param_str");

  function Get_Param_F64
    (Container   : Pcl_Container_Access;
     Key         : Interfaces.C.Strings.chars_ptr;
     Default_Val : Interfaces.C.double) return Interfaces.C.double;
  pragma Import(C, Get_Param_F64, "pcl_container_get_param_f64");

  function Get_Param_Bool
    (Container   : Pcl_Container_Access;
     Key         : Interfaces.C.Strings.chars_ptr;
     Default_Val : C_Bool) return C_Bool;
  pragma Import(C, Get_Param_Bool, "pcl_container_get_param_bool");

  --  Concrete-port creators.  Call these from inside ``On_Configure``; the
  --  returned handle is owned by the container and freed during cleanup.
  function Add_Publisher
    (Container : Pcl_Container_Access;
     Topic     : Interfaces.C.Strings.chars_ptr;
     Type_Name : Interfaces.C.Strings.chars_ptr) return Pcl_Port_Access;
  pragma Import(C, Add_Publisher, "pcl_container_add_publisher");

  function Add_Subscriber
    (Container : Pcl_Container_Access;
     Topic     : Interfaces.C.Strings.chars_ptr;
     Type_Name : Interfaces.C.Strings.chars_ptr;
     Callback  : Pcl_Sub_Callback_Access;
     User_Data : System.Address) return Pcl_Port_Access;
  pragma Import(C, Add_Subscriber, "pcl_container_add_subscriber");

  function Add_Service
    (Container    : Pcl_Container_Access;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Type_Name    : Interfaces.C.Strings.chars_ptr;
     Handler      : Pcl_Service_Handler_Access;
     User_Data    : System.Address) return Pcl_Port_Access;
  pragma Import(C, Add_Service, "pcl_container_add_service");

  function Add_Stream_Service
    (Container    : Pcl_Container_Access;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Type_Name    : Interfaces.C.Strings.chars_ptr;
     Handler      : Pcl_Stream_Handler_Access;
     User_Data    : System.Address) return Pcl_Port_Access;
  pragma Import(C, Add_Stream_Service, "pcl_container_add_stream_service");

  --  Apply a route to a concrete port.  ``Peer_Ids`` is required for remote
  --  routes and must be ``System.Null_Address`` with ``Peer_Count = 0`` for
  --  local-only routes.
  function Port_Set_Route
    (Port       : Pcl_Port_Access;
     Route_Mode : Interfaces.C.unsigned;
     Peer_Ids   : System.Address;
     Peer_Count : Interfaces.C.unsigned) return Pcl_Status;
  pragma Import(C, Port_Set_Route, "pcl_port_set_route");

  --  Publish through a publisher port.  Honours the route configured by
  --  ``Port_Set_Route`` (local fan-out, remote fan-out, or both).
  function Port_Publish
    (Port : Pcl_Port_Access;
     Msg  : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Port_Publish, "pcl_port_publish");

  function Container_Invoke_Async
    (Container    : Pcl_Container_Access;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Callback     : Pcl_Resp_Cb_Access;
     User_Data    : System.Address) return Pcl_Status;
  pragma Import(C, Container_Invoke_Async, "pcl_container_invoke_async");

  ---------------------------------------------------------------------------
  --  Deferred service responses and streaming
  ---------------------------------------------------------------------------

  --  Send the deferred reply for a handler that returned ``PCL_PENDING``.
  function Service_Respond
    (Ctx      : Pcl_Svc_Context_Access;
     Response : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Service_Respond, "pcl_service_respond");

  --  Discard a deferred response ticket without replying.  Use only when
  --  the request is being abandoned without a reply.
  procedure Service_Context_Free(Ctx : Pcl_Svc_Context_Access);
  pragma Import(C, Service_Context_Free, "pcl_service_context_free");

  function Stream_Send
    (Ctx : Pcl_Stream_Context_Access;
     Msg : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Stream_Send, "pcl_stream_send");

  function Stream_End(Ctx : Pcl_Stream_Context_Access) return Pcl_Status;
  pragma Import(C, Stream_End, "pcl_stream_end");

  function Stream_Abort
    (Ctx        : Pcl_Stream_Context_Access;
     Error_Code : Pcl_Status) return Pcl_Status;
  pragma Import(C, Stream_Abort, "pcl_stream_abort");

  function Stream_Is_Cancelled
    (Ctx : Pcl_Stream_Context_Access) return C_Bool;
  pragma Import(C, Stream_Is_Cancelled, "pcl_stream_is_cancelled");

  function Stream_Cancel
    (Ctx : Pcl_Stream_Context_Access) return Pcl_Status;
  pragma Import(C, Stream_Cancel, "pcl_stream_cancel");

  ---------------------------------------------------------------------------
  --  Transport binding
  ---------------------------------------------------------------------------

  --  Install a default transport used for any remote endpoint that does not
  --  name a specific peer.  Most deployments prefer ``Register_Transport``
  --  per-peer; ``Set_Transport`` exists for legacy single-peer setups.
  function Set_Transport
    (Exec      : Pcl_Executor_Access;
     Transport : Pcl_Transport_Const_Access) return Pcl_Status;
  pragma Import(C, Set_Transport, "pcl_executor_set_transport");

  --  Bind ``Transport`` under the logical ``Peer_Id``.  Routes naming this
  --  peer dispatch through ``Transport``; ingress from the same peer is
  --  filtered against per-port allow-lists.
  function Register_Transport
    (Exec      : Pcl_Executor_Access;
     Peer_Id   : Interfaces.C.Strings.chars_ptr;
     Transport : Pcl_Transport_Const_Access) return Pcl_Status;
  pragma Import(C, Register_Transport, "pcl_executor_register_transport");

  function Dispatch_Incoming
    (Exec  : Pcl_Executor_Access;
     Topic : Interfaces.C.Strings.chars_ptr;
     Msg   : access constant Pcl_Msg) return Pcl_Status;
  pragma Import(C, Dispatch_Incoming, "pcl_executor_dispatch_incoming");

  function Invoke_Async
    (Exec         : Pcl_Executor_Access;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Callback     : Pcl_Resp_Cb_Access;
     User_Data    : System.Address) return Pcl_Status;
  pragma Import(C, Invoke_Async, "pcl_executor_invoke_async");

  --  Apply an endpoint-level route, primarily for consumed (client) services
  --  that have no concrete local port object to attach a route to.
  function Set_Endpoint_Route
    (Exec  : Pcl_Executor_Access;
     Route : access constant Pcl_Endpoint_Route) return Pcl_Status;
  pragma Import(C, Set_Endpoint_Route, "pcl_executor_set_endpoint_route");

  function Invoke_Stream
    (Exec         : Pcl_Executor_Access;
     Service_Name : Interfaces.C.Strings.chars_ptr;
     Request      : access constant Pcl_Msg;
     Callback     : Pcl_Stream_Msg_Cb_Access;
     User_Data    : System.Address;
     Out_Ctx      : access Pcl_Stream_Context_Access) return Pcl_Status;
  pragma Import(C, Invoke_Stream, "pcl_executor_invoke_stream");

  ---------------------------------------------------------------------------
  --  TCP socket transport
  --
  --  See ``include/pcl/pcl_transport_socket.h`` for the wire protocol and
  --  the gateway-container conventions used by the server side.
  ---------------------------------------------------------------------------

  --  Create a server-mode socket transport that binds and listens on
  --  ``Port`` (0 = OS-chosen ephemeral) and blocks until one client
  --  connects.  The caller must afterwards configure, activate, and add
  --  the result of ``Socket_Gateway_Container`` to ``Executor`` so that
  --  inbound service requests can be dispatched.
  function Create_Socket_Server
    (Port     : Interfaces.C.unsigned_short;
     Executor : Pcl_Executor_Access) return Pcl_Socket_Transport_Access;
  pragma Import(C, Create_Socket_Server, "pcl_socket_transport_create_server");

  --  Server variant that publishes the bound port via ``Port_Ready`` before
  --  blocking on accept.  Lets a sibling thread spin up a client without
  --  hard-coding an ephemeral port.
  function Create_Socket_Server_Ex
    (Port       : Interfaces.C.unsigned_short;
     Executor   : Pcl_Executor_Access;
     Port_Ready : access Interfaces.C.unsigned_short)
      return Pcl_Socket_Transport_Access;
  pragma Import(C, Create_Socket_Server_Ex, "pcl_socket_transport_create_server_ex");

  --  Return the TCP port currently bound to this transport (the assigned
  --  ephemeral port for ``Port = 0``, otherwise the supplied value).
  function Get_Socket_Port
    (Ctx : Pcl_Socket_Transport_Access) return Interfaces.C.unsigned_short;
  pragma Import(C, Get_Socket_Port, "pcl_socket_transport_get_port");

  --  Create a single-shot client transport.  Returns ``null`` if the server
  --  is not currently listening; use ``Create_Socket_Client_Ex`` for
  --  retry / auto-reconnect.
  function Create_Socket_Client
    (Host     : Interfaces.C.Strings.chars_ptr;
     Port     : Interfaces.C.unsigned_short;
     Executor : Pcl_Executor_Access) return Pcl_Socket_Transport_Access;
  pragma Import(C, Create_Socket_Client, "pcl_socket_transport_create_client");

  --  Create a client transport with bounded retry, optional auto-reconnect,
  --  and state callbacks (see ``Pcl_Socket_Client_Opts``).
  function Create_Socket_Client_Ex
    (Host     : Interfaces.C.Strings.chars_ptr;
     Port     : Interfaces.C.unsigned_short;
     Executor : Pcl_Executor_Access;
     Opts     : access constant Pcl_Socket_Client_Opts)
      return Pcl_Socket_Transport_Access;
  pragma Import(C, Create_Socket_Client_Ex, "pcl_socket_transport_create_client_ex");

  --  Thread-safe query of the current connection state.
  function Get_Socket_State
    (Ctx : Pcl_Socket_Transport_Access) return Pcl_Socket_State;
  pragma Import(C, Get_Socket_State, "pcl_socket_transport_get_state");

  --  Transport vtable handle for ``Set_Transport`` / ``Register_Transport``.
  function Get_Socket_Transport
    (Ctx : Pcl_Socket_Transport_Access) return Pcl_Transport_Const_Access;
  pragma Import(C, Get_Socket_Transport, "pcl_socket_transport_get_transport");

  --  Bind a logical peer ID for ingress filtering and route matching.  This
  --  is the same name used in ``Register_Transport`` and route peer lists.
  function Set_Socket_Peer_Id
    (Ctx     : Pcl_Socket_Transport_Access;
     Peer_Id : Interfaces.C.Strings.chars_ptr) return Pcl_Status;
  pragma Import(C, Set_Socket_Peer_Id, "pcl_socket_transport_set_peer_id");
